# hello-cmake-root

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  HelloSayer.cxx  README.md
